[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iq-to-audio"
version = "0.1.0"
description = "Extract and demodulate narrowband FM audio from SDR++ baseband recordings."
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
  { name = "IQ to Audio Tool" }
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "soundfile>=0.12",
  "soxr>=0.3",
  "tqdm>=4.66",
  "matplotlib>=3.10.7",
  "PySide6>=6.6.0",
  "PySide6-Addons>=6.6.0"
]

[project.scripts]
iq-to-audio = "iq_to_audio.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = ["pytest>=7.4"]
